<resources>
    <string name="full_name">Name</string>

    <string name="user_online">Online</string>
    <string name="user_offline">Offline</string>

    <string name="follow_user">FOLLOW</string>

    <string name="posts_label">posts</string>
    <string name="followers_label">followers</string>
    <string name="following_label">following</string>

    <string name="menu_search">Search</string>

    <string name="error_notif">"Can't load notifications"</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <!--Profile-->
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="options">Options</string>
    <string name="repositories">Repositories</string>
    <string name="feed">Feed</string>
    <string name="stars">Stars</string>
    <string name="bio">Bio</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <!--Search-->
    <string name="search_hint">Search repository or user</string>
    <string name="results">Results</string>
    <!--Repo Details-->
    <string name="info">Info</string>
    <string name="no_search_results">No search results</string>

    <string name="no_post">User has no posts</string>
    <string name="server_questions_error">Can\'t load questions</string>
    <string name="app_name">Stack over relations</string>
    <string name="server_questions_success">Questions loaded</string>
    <string name="paginationPreferences">Pagination</string>
    <string name="label_dialog">Pagination</string>
    <string name="label_type_your_pagination">type your paginationPreferences</string>
    <string name="label_submit">Submit</string>
    <string name="label_cancel">Cancel</string>
    <string name="links">Links</string>
    <string name="none">none</string>
    <string name="img_error">image</string>
    <string name="send">Send</string>
    <string name="title">The problem briefly</string>
    <string name="describe_the_problem">Describe the problem</string>
    <string name="emptyTitleOrDesc">Enter the title and description of your problem</string>
    <string name="server_add_newq_error">Error create new question</string>
    <string name="button">Answer</string>
    <string name="describe_answer">Describe your Answer</string>
    <string name="emptyDesc">Enter the answer</string>
    <string name="server_add_newa_error">Error create new answer</string>
    <string name="menu_home">Feed</string>
    <string name="menu_notifications">Notifications</string>



    <string name="welcome_msg">Welcome!</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-7281450262111610/2801286068</string>
    <string name="channel_title">Firebase message channel</string>
    <string name="register">register</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_login">Login</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_link_to_register">Get registered in app</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="error_email">Enter email address!</string>
    <string name="error_pass">Enter password!</string>
    <string name="error_pass_length">Password too short, enter minimum 6 characters!</string>
    <string name="error_signin">Sign In Error</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic IDP Auth</string>
    <string name="desc_generic_idp">Use a generic identity provider, like Microsoft or Yahoo, to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">Generic IDP Sign In\nwith Microsoft</string>
    <string name="msft_status_fmt">Microsoft User: %s</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="forgot">Enter the email</string>
    <string name="reset_code">reset code</string>
    <string name="phone_auth">With phone number</string>
    <string name="answers">answers</string>
    <string name="questions">questions</string>
    <string name="status">status</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="my_questions">My questions</string>
    <string name="btn_register">Register</string>
    <string name="btn_already_registered">Already registered? Tap me</string>
    <string name="menu_profile">Profile</string>
    <string name="username">Username</string>
    <string name="zero">0</string>
</resources>
